--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inria+Serif&family=Jacques+Francois&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/style.min.css">
+
+  <link rel="shortcut icon" href="/assets/img/favcon.svg" type="image/x-icon">
   <title>GOODMOODS</title>
 </head>
 
