--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body>
   <header class="header" id="home">
-    <nav class="header__nav">
+    <nav class="header__nav nav--1">
       <a href="#about" class="menu-font-primary color-terciary">About Us</a>
       <a href="#services" class="menu-font-primary color-terciary">Services</a>
     </nav>
-    <div class="logo">
+    <div class="header__logo">
       <img src="/assets/img/GOODMOODS.svg" alt="">
     </div>
-    <nav class="header__nav">
+    <nav class="header__nav nav--2">
       <a href="#projects" class="menu-font-primary color-terciary">Projects</a>
       <a href="https://www.linkedin.com/in/cunham4theus/" target="_blank" class="menu-font-primary color-terciary">Blog</a>
     </nav>
@@ -122,12 +122,12 @@
   <footer class="footer">
     <div class="footer__contact">
       <div class="footer__contact-container">
-        <h4 class="menu-font-secondary">Call us now</h4>
+        <h4 class="menu-font-secondary"><b>Call us now</b> </h4>
         <p class="defaut-font-secondary">Office telephone: 23243455</p>
         <p class="defaut-font-secondary">Mobile number: 634-576-8341</p>
       </div>
       <div class="footer__contact-address">
-        <h4 class="menu-font-secondary">Come visit us</h4>
+        <h4 class="menu-font-secondary"><b>Come visit us</b> </h4>
         <p class="defaut-font-secondary">401, Twin star plaza,
           Newyork
           USA. </p>
