--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Service
           </h3>
           <p class="defaut-font-terciary color-terciary">Lorem ipsum dolor sit amet, consectetur</p>
-          <div>
+          <div class="botao">
             <a href="" class="btn services-btn defaut-font-terciary">view</a>
           </div>
         </div>
@@ -74,7 +74,7 @@
             Service
           </h3>
           <p class="defaut-font-terciary color-terciary">Lorem ipsum dolor sit amet, consectetur</p>
-          <div>
+          <div class="services__container__cards__btn">
             <a href="" class="btn services-btn defaut-font-terciary">view</a>
           </div>
         </div>
